# Data-Structures-and-Algorithms

./: CMakeLists.txt  HELP.txt  README.md
include/: algo.h  array.h  assert.h  data.h  hashtable.h  linkedlist.h  manage.h  restricted.h
parse/: parser.hs
src/: algo.c  array.c  data.c  hashtable.c  linkedlist.c  main.c  manage.c  restricted.c
